<resources>
    <string name="app_name" translatable="false">Been love memory</string>

    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ADS_ID" translatable="false">ca-app-pub-3940256099942544/6300978111</string>


    <string-array name="tablayout">
        <item></item>
        <item>BEEN LOVE MEMORY</item>
        <item></item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_splash">Proud Vietnamese application</string>


    <string name="msg_error_unable_select_profile_pic" translatable="false">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo" translatable="false">Set profile image</string>
    <string name="lbl_take_camera_picture" translatable="false">Take a picture</string>
    <string name="lbl_choose_from_gallery" translatable="false">Choose from gallery</string>
    <string name="toast_image_intent_null" translatable="false">Image picker option is missing!</string>
    <!-- font families -->
    <string name="font_family_light" translatable="false">sans-serif-light</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_family_black" translatable="false">sans-serif-black</string>
    <string name="font_family_thin" translatable="false">sans-serif-thin</string>
    <string name="dialog_permission_title" translatable="false">Grant Permissions</string>
    <string name="dialog_permission_message" translatable="false">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings" translatable="false">GOTO SETTINGS</string>

    <!--    insert_memory-->
    <string name="themKN">Add memories of love</string>
    <string name="NhapND">Enter what you want to write</string>
    <string name="ChonNgay">Choose a date</string>
    <string name="ChonAnh">Choose photo:</string>
    <!--    Activity_Lock-->
    <string name="ChonLBM">Choose a security type</string>
    <!--    splash-->
    <string name="version" translatable="false">ⓒ 2016-2020 BLM Studio Ltd.</string>
    <!--    update_memory-->
    <string name="ChinhSuaKM">Edit love memories</string>
    <!--    fragment_date-->
    <string name="nam">Year</string>
    <string name="thang">Month</string>
    <string name="tuan">Week</string>
    <string name="ngay">Day</string>
    <string name="gio">Hour</string>
    <string name="phut">Minute</string>
    <string name="giay">Second</string>
    <!--    fragment_letter-->
    <string name="gui">Send </string>
    <string name="boy" translatable="false">Boy</string>
    <string name="girl" translatable="false">Girl</string>
    <string name="chungminh">We have been in love for 0 years, 0 months, 0 days, 0 hours, 0 minutes, 0 seconds.</string>
    <string name="maiyeu">Love forever, </string>
    <string name="beenLM" translatable="false">#beenlovememory</string>
    <!--    frament_main-->
    <string name="DY">In love</string>
    <!--    numlock1_2-->
    <string name="NhapPIN">Enter the PIN code</string>
    <string name="NhaplaiPIN">Re-enter the PIN</string>
    <!--    patternlock-->
    <string name="VeHinh">Draw a pattern</string>
    <string name="VeLaiHinh">Redraw a pattern</string>
    <!--    wallpaper-->
    <string name="ChonHinh">Choose a wallpaper</string>
    <!--    setting-->
    <string name="cd">Setting</string>
    <string name="lite">Lite interface</string>
    <string name="ll">love lock screen</string>
    <string name="touchBML">1 touch BLM</string>
    <string name="ads">Hide ads</string>
    <string name="font">Change the font</string>
    <string name="noti">Show notification bar</string>
    <string name="pass">Set a private password</string>
    <string name="bakup">Backup and restore</string>
    <string name="bd">Bắt đầu đếm từ 0</string>
    <string name="morong">Extend</string>
    <string name="dongho">Been Love Memory watches</string>
    <string name="chd">12 signs of the zodiac</string>
    <string name="tuvi">See fortune-telling and Horoscopes 12 Zodiacs</string>
    <string name="tinnhan">Love messages</string>
    <string name="fp">Fanpage on Facebook</string>
    <string name="review">App reviews</string>

    <string name="ios">IOS version</string>
    <string name="share">Share your friends</string>
    <string name="phanhoi">Feedback</string>
    <string name="baomat">Privacy Policy</string>
    <string name="phienban">Version (3.1.1)</string>

    <string name="Nhap">Enter</string>
    <string name="save">Save</string>


<!--    12 con giáp-->
    <string name="Aries">Aries</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Pisces</string>

<!--    Dialog-->
    <string name="BD">change of birth date</string>
    <string name="bgcl">change background color</string>
    <string name="gender_change">gender change</string>

    <string name="avatar_change">avatar change</string>
    <string name="cpf">Change photo frame</string>
    <string name="change_name">change name</string>

    <string name="c_date">change the date</string>
    <string name="title_above">Change the title above</string>
    <string name="title_below">Change the title below</string>
    <string name="Change_background">Change background</string>
    <string name="Reshape_BLM">Reshape BLM</string>
    <string name="Screen_capture">Screen capture</string>

    <string name="pin">PIN Number</string>
    <string name="pattern">Pattern</string>


</resources>
