<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLetter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gui"
                android:textColor="#fff"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/nn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boy"
                android:textColor="#fff"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=","
                android:textColor="#fff"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chungminh"
                android:textColor="#fff"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maiyeu"
                android:textColor="#fff"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/nn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/girl"
                android:textColor="#fff"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beenLM"
                android:textColor="#fff"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>