<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertMemoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:text="@string/themKN"
            style="@style/tvThemKNTY" />

        <EditText
            android:id="@+id/edtDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NhapND" />

        <TextView
            android:id="@+id/edtDate"
            android:hint="@string/ChonNgay"
            style="@style/tvChonNgay" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ChonAnh"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:id="@+id/imgCamera"
            android:src="@drawable/photo_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/backgroud" />
    </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Lưu" />

</LinearLayout>