<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fmDate"
    android:layout_height="match_parent"
    tools:context=".FragmentDate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="7">

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvYear"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvNam"
                    android:text="@string/nam"
                    style="@style/tvTime" />
            </LinearLayout>

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvMonth"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvThang"
                    android:text="@string/thang"
                    style="@style/tvTime" />
            </LinearLayout>

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvWeek"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvTuan"
                    android:text="@string/tuan"
                    style="@style/tvTime" />
            </LinearLayout>

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvDay"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvNgay"
                    android:text="@string/ngay"
                    style="@style/tvTime" />
            </LinearLayout>

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvHour"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvGio"
                    android:text="@string/gio"
                    style="@style/tvTime" />
            </LinearLayout>

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvMinute"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvPhut"
                    android:text="@string/phut"
                    style="@style/tvTime" />
            </LinearLayout>

            <LinearLayout style="@style/lnTime">

                <FrameLayout style="@style/frameTime">

                    <ImageView
                        android:src="@drawable/img_heart_wave"
                        style="@style/imgTime" />

                    <TextView
                        android:id="@+id/tvsSecond"
                        android:text="0"
                        android:textColor="#fff"
                        style="@style/imgTime" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvGiay"
                    android:text="@string/giay"
                    style="@style/tvTime" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:src="@drawable/img_heart_red"/>
            <TextView
                android:id="@+id/tvTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:src="@drawable/img_heart_red"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>