<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imglogo"
            android:src="@drawable/logo"
            style="@style/imgLogo" />

        <TextView
            android:id="@+id/tvtitle"
            android:text="@string/app_name"
            style="@style/tvAppName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvtitle1"
                android:text="@string/title_splash"
                style="@style/tvTuHao" />

            <TextView
                android:id="@+id/tvtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" | "
                android:textColor="#000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgtitle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/co"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="bottom|center">
            <TextView
                android:id="@+id/tv_info"
                android:gravity="bottom"
                android:text="@string/version"
                style="@style/tvTuHao" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|center">

        <TextView
            android:text="ⓒ 2016-2020 BLM Studio Ltd."
            style="@style/tvTuHao" />
    </LinearLayout>



</LinearLayout>